# gameAI

./: CMakeLists.txt  main.cpp
Actors/: BaseGameEntity.cpp  BaseGameEntity.h  EntityNames.h  State.h  StateMachine.h  location_type.h
Actors/Guard/: Guard.h  GuardOwnedStates.cpp  GuardOwnedStates.h  Patrol.h
